--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,19 @@
     android:layout_gravity="center_vertical"
     >
 
-    <TextView
+    <ImageView
+        android:id="@+id/dice_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="30sp"
         android:layout_gravity="center_horizontal"
+        android:src="@drawable/dice_1"
         />
 
     <Button
+        android:id="@+id/roll_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="roll"
+        android:text="@string/roll"
         android:layout_gravity="center_horizontal"
         />
 </LinearLayout>
